fix review: Locale nullable